commit del proyecto numero 12

--- a/pagina_de_contactos.html
+++ b/pagina_de_contactos.html
@@ -41,10 +41,10 @@
                             <label class="cuerpo__campos">Edad</label>
                             <input type="number" name="edad" placeholder="Escribe aqui tu tu edad" class="cuerpo__input">
                             <label class="cuerpo__campos">Fecha de nacimiento</label>
-                            <input type="date" name="fecha" placeholder="Introduce tu fecha de nacimiento" class="cuerpo__input">
+                            <input type="date" name="fecha" class="cuerpo__input">
                             <label class="cuerpo__campos">Genero</label>
-                            <select name="genero" placeholder="Elige tu genero" class="cuerpo__input">
-                                <option value="sin especificar" class="cuerpo__input" placeholder="Elige tu genero">Sin especificar</option>
+                            <select name="genero" class="cuerpo__input">
+                                <option value="sin especificar" class="cuerpo__input">Sin especificar</option>
                                 <option value="hombre" class="cuerpo__input">Hombre</option>
                                 <option value="mujer" class="cuerpo__input">Mujer</option>
                             </select>
