commit del proyecto numero 15

--- a/sonic_superstars.html
+++ b/sonic_superstars.html
@@ -34,12 +34,12 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__imagen-informacion-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__imagen-informacion-producto"></a>
+                    <a href="assets/img/sonic_superstars.jpg"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__imagen-informacion-producto"></a>
                     <article class="cuerpo2__descripcion-producto">
                         <h3 class="cuerpo2__nombre-producto">Sonic superstars</h3>
                         <p class="cuerpo2__descripcion">Sonic Superstars es un videojuego de la serie Sonic the Hedgehog. Es un juego de plataformas en 2D, similar a las entradas de Sega Mega Drive, y sigue a Sonic, Tails, Amy y Knuckles mientras exploran las místicas Northstar Islands para derrotar al Dr. Eggman, quien se ha asociado con el travieso cazarrecompensas Fang the Sniper. para derrotar a los héroes.</p>
                         <p class="cuerpo2__descripcion">En particular, el juego contará con un nuevo personaje creado por el diseñador original de Sonic, Naoto Ōshima, y un "nuevo y misterioso adversario", aunque se desconoce si estos son personajes separados o uno en el mismo.</p>
-                        <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso__regreso">volver</a></p>
+                        <p><a href="./pagina_de_productos.html" class="cuerpo2__boton-regreso">volver</a></p>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
