commit del proyecto numero 16

--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -6,7 +6,6 @@
             <link rel="icon" sizes="64x64" href="./assets/img/OIF.ico">
             <link rel="apple-touch-icon" sizes="180x180" href="./assets/img/OIF.ico">
             <link rel="stylesheet" href="css/styles.css">
-            <script src="js/index.js"></script>
             <title>Web-Sonic.com</title>
         </head>
         <body>
@@ -47,8 +46,9 @@
             </main>
             <footer class="pie">
                 <h4>Pagina web realizada por Cesar Gabriel Ucha Sousa (alias: ricitos2001)
-                    <img src="./assets/img/copyright.png" alt="Logo" class="pie__copyright">
+                    <img src="./assets/img/copyright_black.png" alt="Logo" class="pie__copyright" id="pie__copyright">
                 </h4>
             </footer>
         </body>
+        <script src="js/index.js"></script>
     </html>
