--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -31,7 +31,7 @@
                     </ul>
                 </nav>
             </header>
-            <main class="cuerpo">
+            <main class="cuerpo" id="box">
                 <h2 class="cuerpo__titulo">PAGINA PRINCIPAL</h2>
                 <article class="cuerpo__caja">
                     <h3 class="cuerpo__subtitulo">Un blog de Sonic</h3>
