--- a/pagina_de_productos.html
+++ b/pagina_de_productos.html
@@ -26,8 +26,9 @@
                     <ul class="cabecera__enlaces">
                         <li><a href="pagina_principal.html">Pagina principal</a></li>
                         <li><a href="pagina_de_productos.html">Productos</a></li>
-                        <li><a href="pagina_de_contactos.html">Pagina de contactos</a></li>
+                        <li><a href="pagina_de_contactos.html">Contacto</a></li>
                         <li><a href="pagina_adicional.html">Contenido extra</a></li>
+                        <li><a href="pagina_del_carrito.html">Carrito</a></li>
                     </ul>
                 </nav>
             </header>
@@ -76,7 +77,7 @@
             </main>
             <footer class="pie">
                 <h4>Pagina web realizada por Cesar Gabriel Ucha Sousa (alias: ricitos2001)
-                    <img src="./assets/img/copyright.png" alt="Logo" class="pie__copyright">
+                    <img src="./assets/img/copyright.png" alt="Logo" id="pie__copyright" class="pie__copyright">
                 </h4>
             </footer>
         </body>
