--- a/pagina_del_carrito.html
+++ b/pagina_del_carrito.html
@@ -26,28 +26,14 @@
                     <ul class="cabecera__enlaces">
                         <li><a href="pagina_principal.html">Pagina principal</a></li>
                         <li><a href="pagina_de_productos.html">Productos</a></li>
+                        <li><a href="pagina_del_carrito.html">Compra</a></li>
                         <li><a href="pagina_de_contactos.html">Contacto</a></li>
                         <li><a href="pagina_adicional.html">Contenido extra</a></li>
-                        <li><a href="pagina_del_carrito.html">Carrito</a></li>
                     </ul>
                 </nav>
             </header>
             <main class="cuerpo3">
-                <h2 class="cuerpo3__titulo">SONIC Y EL AUTISMO</h2>
-                <article class="cuerpo3__caja">
-                    <h3 class="cuerpo3__caja__subtitulo">¿Por qué a las personas autistas les gusta Sonic?</h3>
-                    <a href="assets/img/sonic.jpg" class="cuerpo3__imagen-caja"><img src="assets/img/autismo.jpg" alt="Sonic" class="cuerpo3__imagen"></a>
-                    <p class="cuerpo3__texto">Mucha gente está familiarizada con el personaje Sonic the Hedgehog, pero ¿sabías que es particularmente popular entre las personas autistas? De hecho, incluso existe un término para este fenómeno: "patología sónica". Si bien las razones detrás de esta afinidad no se comprenden completamente, existen algunas teorías sobre por qué las personas autistas podrían sentirse atraídas por el erizo azul.</p>
-                </article>
-                <section id="galeria" class="cuerpo3__galeria">
-                    <h3>Galería</h3>
-                    <label for="url-imagen"></label>
-                    <input type="text" name="url-imagen" placeholder="URL de la imagen" class="cuerpo3__url-imagen" id="url-imagen"/>
-                    <article class="cuerpo3__botones">
-                        <button class="cuerpo3__boton-agregar-imagen" id="agregar-imagen">Añadir Imagen</button>
-                        <button class="cuerpo3__boton-eliminar-imagen" id="eliminar-imagen">Eliminar Imagen</button>
-                    </article>
-                </section>
+                <h2 class="cuerpo3__titulo">CARRITO DE LA COMPRA</h2>
             </main>
             <footer class="pie">
                 <h4>Pagina web realizada por Cesar Gabriel Ucha Sousa (alias: ricitos2001)
@@ -55,5 +41,5 @@
                 </h4>
             </footer>
         </body>
-        <script src="./js/index.js"></script>
+        <script src="js/index.js"></script>
     </html>
